--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 {
 "version":"5.5",
 "changelog":"New Update Death Injector",
-"link":"https://youtu.be/erUUET-cXjQ"
+"link":"https://youtu.be/LwBOihZb1KQ"
 }
 ]
