--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"5.5",
+"version":"5.6",
 "changelog":"New Update Death Injector",
-"link":"https://youtu.be/LwBOihZb1KQ"
+"link":"https://youtu.be/98JqWfNJvtE"
 }
 ]
