--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"5.6",
+"version":"5.7",
 "changelog":"New Update Death Injector",
-"link":"https://youtu.be/98JqWfNJvtE"
+"link":"https://youtu.be/AQz6MVUoaYE"
 }
 ]
