--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"5.7",
+"version":"5.8",
 "changelog":"New Update Death Injector",
-"link":"https://youtu.be/AQz6MVUoaYE"
+"link":"https://youtu.be/xgbcZiiG9f8"
 }
 ]
