--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"5.8",
+"version":"5.9",
 "changelog":"New Update Death Injector",
-"link":"https://youtu.be/xgbcZiiG9f8"
+"link":"https://youtu.be/MER_AcD26zQ"
 }
 ]
