--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 [
 {
-"version":"5.9",
-"changelog":"New Update Death Injector",
+"version":"V.6",
+"changelog":"🌴Death Injector V6🌴
+
+🔸The following are newly added features for Death Injector V6😻
+
+♨️INJECTOR :
+✓Add Old Skin
+✓Fix Audio/Sfx Skin
+
+♨️MORE SKINS  ",
 "link":"https://youtu.be/MER_AcD26zQ"
 }
 ]
