--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"6.0",
-"changelog":"🌴 New Update Death Injector V6🌴",
-"link":"https://youtu.be/1LmkvN3ZxOY"
+"version":"6.1",
+"changelog":"🌴 New Update Death Injector V6.1🌴",
+"link":"https://youtu.be/AAbqYbCCokA"
 }
 ]
